# gandalf

./: .gitignore  .goreleaser.yaml  AGENTS.md  ARCHITECTURE.md  CONCEPTS.md  Cargo.toml  DESIGN.md  Makefile  PLAN.md  PRODUCT.md  README.md  TODOS.md  go.mod  go.sum  install.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-landing.yml  publish.yml  release.yml  snaptailor-audit.yml
apps/cli/: README.md  package.json  tsconfig.json
apps/desktop/: index.html  package.json
apps/landing/: astro.config.mjs  package.json  tsconfig.json  wrangler.jsonc
apps/tui/: .npmignore  package.json  tsconfig.json
crates/gandalf-cli/: Cargo.toml
crates/gandalf-cli/src/: lib.rs  main.rs
crates/gandalf-cli/src/commands/: extended.rs  mod.rs
crates/gandalf-cli/tests/: cli_smoke.rs
crates/hem-cli/: Cargo.toml
crates/hem-cli/src/: lib.rs  main.rs
crates/hem-cli/src/commands/: extended.rs  mod.rs
crates/hem-cli/tests/: cli_smoke.rs
crates/hem-core/: Cargo.toml
crates/hem-core/src/: audit.rs  bundle.rs  diff.rs  lib.rs  path_confinement.rs  policy.rs  readiness.rs  report.rs  snapshot.rs  store.rs  tar.rs  timeline_undo.rs  types.rs
crates/hem-core/src/restore/: apply.rs  plan.rs
crates/hem-core/src/scan/: filesystem.rs
crates/hem-core/src/scan/plugins/: claude_code.rs  codex.rs  mod.rs  project.rs
crates/hem-core/tests/: analysis_test.rs  bundle_test.rs  policy_test.rs  readiness_test.rs  restore_test.rs  scan_test.rs  snapshot_test.rs  store_test.rs  timeline_test.rs
crates/hem-core/tests/fixtures/: README.md
demo/: README.md  fix.tape  pain.tape
docs/: bundle-format.md  completion-audit.md  dogfood.md  index.html  script.js  style.css  validation-incidents.md
fixtures/: README.md
scripts/: changes-home-acceptance.sh  cross-machine-dogfood.mjs  cross-machine-dogfood.sh  gate2-acceptance.mjs  gate2-acceptance.sh  gate2-console-acceptance.sh  gate2-demo.mjs  gate2-video-fixture.mjs  install-smoke.sh  package-smoke.mjs  restore-safety-regression.sh  run-gate2-vhs.mjs  verify-review-patches.sh
src/: audit.ts  bundle.ts  cli-shared.ts  cli.ts  current-state.ts  daemon.ts  diff.ts  errors.ts  graph.ts  parsers.ts  policy.ts  readiness.ts  report.ts  restore.ts  scan.ts  store.ts  tar.ts  timeline-undo.ts  timeline.ts  types.ts  update-check.ts
tests/: analysis.test.ts  bundle.test.ts  cli.test.ts  daemon.test.ts  doctor.test.ts  errors.test.ts  restore.test.ts  scan.test.ts  store.test.ts  tar.test.ts  timeline.test.ts  tui.test.tsx  update-check.test.ts
(+377 files in other folders)
