[workspace]
resolver = "2"
members = [
  "crates/gandalf-core",
  "crates/gandalf-cli",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
version = "0.3.4"
authors = ["qyinm"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
toml = "0.8"
sha2 = "0.10"
tempfile = "3"