[package]
name = "gandalf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Gandalf terminal client"

[[bin]]
name = "gandalf"
path = "src/main.rs"

[lib]
name = "gandalf_cli"
path = "src/lib.rs"

[dependencies]
gandalf-core = { path = "../gandalf-core" }
clap = { version = "4", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true