[package]
name = "hem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hem engine: scan, snapshot, diff, audit, and restore for AI agent setups"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
toml.workspace = true
sha2.workspace = true
hmac = "0.12"
tempfile.workspace = true
regex = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true